Updates to Server Restore

--- a/server_restore/tasks/main.yml
+++ b/server_restore/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
+# Assume Role for AWS Access
 - name: Assume Role
   amazon.aws.sts_assume_role:
     role_arn: "arn:aws:iam::{{ aws_account_no }}:role/{{ aws_role }}"
@@ -7,27 +8,25 @@
   register: assumed_role
   delegate_to: localhost
 
+# Get Instance Metadata
 - name: Fetch instance identity document
   ansible.builtin.uri:
     url: "http://169.254.169.254/latest/dynamic/instance-identity/document"
     return_content: true
     method: GET
-  register: instance_info
+  register: instance_metadata
 
-- name: Set region and instance_id
+- name: Set region, instance_id, and availability_zone
   ansible.builtin.set_fact:
-    aws_region: "{{ (instance_info.content | from_json).region }}"
-    instance_id: "{{ (instance_info.content | from_json).instanceId }}"
-    availability_zone: "{{ (instance_info.content | from_json).availabilityZone }}"
-    
-########################################################################
-# 2) Gather volume IDs attached to this instance
-########################################################################
-- name: Gather instance info
+    aws_region: "{{ (instance_metadata.content | from_json).region }}"
+    instance_id: "{{ (instance_metadata.content | from_json).instanceId }}"
+    availability_zone: "{{ (instance_metadata.content | from_json).availabilityZone }}"
+
+# Get All Attached Volumes
+- name: Get instance details
   amazon.aws.ec2_instance_info:
     region: "{{ aws_region }}"
-    instance_ids:
-      - "{{ instance_id }}"
+    instance_ids: "{{ instance_id }}"
     access_key: "{{ assumed_role.sts_creds.access_key }}"
     secret_key: "{{ assumed_role.sts_creds.secret_key }}"
     session_token: "{{ assumed_role.sts_creds.session_token }}"
@@ -36,43 +35,87 @@
 
 - name: Extract root device name
   ansible.builtin.set_fact:
-    device_name: "{{ instance_info.instances[0].root_device_name }}"
+    root_device_name: "{{ instance_info.instances[0].root_device_name }}"
 
-- name: Extract current root volume ID
+- name: Extract all attached volumes
   ansible.builtin.set_fact:
-    old_root_volume_id: "{{ instance_info.instances[0].block_device_mappings | selectattr('device_name', 'equalto', device_name) | map(attribute='ebs.volume_id') | first }}"
+    block_device_mappings: "{{ instance_info.instances[0].block_device_mappings }}"
 
-- name: Debug volume IDs
+- name: Debug attached volumes
   ansible.builtin.debug:
-    msg: "Found volumes: {{ old_root_volume_id }} in region {{ aws_region }}"
+    var: block_device_mappings
 
-# Find the latest snapshot for the root volume
-- name: Get snapshots for the old root volume
+# Initialize block_device_snapshots as an empty list
+- name: Initialize block_device_snapshots
+  ansible.builtin.set_fact:
+    block_device_snapshots: []
+
+# Find the Latest Snapshot for Each Volume
+- name: Find latest snapshot for each volume
   amazon.aws.ec2_snapshot_info:
     region: "{{ aws_region }}"
     filters:
-      volume-id: "{{ old_root_volume_id }}"
+      volume-id: "{{ item.ebs.volume_id }}"
       status: "completed"
     access_key: "{{ assumed_role.sts_creds.access_key }}"
     secret_key: "{{ assumed_role.sts_creds.secret_key }}"
     session_token: "{{ assumed_role.sts_creds.session_token }}"
   register: volume_snapshots
+  loop: "{{ block_device_mappings }}"
   delegate_to: localhost
 
-- name: Fail if no snapshots exist
-  ansible.builtin.fail:
-    msg: "No snapshots found for volume {{ old_root_volume_id }}"
-  when: volume_snapshots.snapshots | length == 0
-
-- name: Set snapshot_id to the latest snapshot
+- name: Set facts for latest snapshots
   ansible.builtin.set_fact:
-    snapshot_id: "{{ (volume_snapshots.snapshots | sort(attribute='start_time', reverse=true) | first).snapshot_id }}"
+    block_device_snapshots: >-
+      {{ block_device_snapshots + [{
+        "device_name": item.item.device_name,
+        "volume_id": item.item.ebs.volume_id,
+        "snapshot_id": (item.snapshots | sort(attribute='start_time', reverse=true) | first).snapshot_id
+      }] }}
+  loop: "{{ volume_snapshots.results }}"
+  when: item.snapshots | length > 0
 
-- name: Show the snapshot_id
+- name: Fail if any volume has no snapshot
+  ansible.builtin.fail:
+    msg: "No snapshots found for one of the volumes"
+  when: block_device_snapshots is not defined or block_device_snapshots | length == 0
+
+- name: Debug snapshot information
   ansible.builtin.debug:
-    var: snapshot_id
+    var: block_device_snapshots
 
-# Stop instance and replace volume
+# Initialize block_device_new_volumes as an empty list
+- name: Initialize block_device_new_volumes
+  ansible.builtin.set_fact:
+    block_device_new_volumes: []
+
+# Create New Volumes from Snapshots
+- name: Create new volumes from snapshots
+  amazon.aws.ec2_vol:
+    region: "{{ aws_region }}"
+    snapshot: "{{ item.snapshot_id }}"
+    availability_zone: "{{ availability_zone }}"
+    volume_type: "gp3"
+    access_key: "{{ assumed_role.sts_creds.access_key }}"
+    secret_key: "{{ assumed_role.sts_creds.secret_key }}"
+    session_token: "{{ assumed_role.sts_creds.session_token }}"
+  register: new_volumes
+  loop: "{{ block_device_snapshots }}"
+  delegate_to: localhost
+
+- name: Set facts for new volumes
+  ansible.builtin.set_fact:
+    block_device_new_volumes: "{{ block_device_new_volumes + [{
+      'device_name': item.item.device_name,
+      'old_volume_id': item.item.volume_id,
+      'new_volume_id': item.volume_id }] }}"
+  loop: "{{ new_volumes.results }}"
+
+- name: Debug new volumes
+  ansible.builtin.debug:
+    var: block_device_new_volumes
+
+# Stop the EC2 Instance AFTER new volumes are created
 - name: Stop the instance
   amazon.aws.ec2_instance:
     region: "{{ aws_region }}"
@@ -96,54 +139,33 @@
   delay: 10
   delegate_to: localhost
 
-- name: Create new volume from the latest snapshot
+# Detach Old Volumes
+- name: Detach old volumes
   amazon.aws.ec2_vol:
     region: "{{ aws_region }}"
-    snapshot: "{{ snapshot_id }}"
-    availability_zone: "{{ availability_zone }}"
-    volume_type: "gp3"
-    access_key: "{{ assumed_role.sts_creds.access_key }}"
-    secret_key: "{{ assumed_role.sts_creds.secret_key }}"
-    session_token: "{{ assumed_role.sts_creds.session_token }}"
-  register: new_volume
-  delegate_to: localhost
-
-- name: Wait for new volume to be available
-  amazon.aws.ec2_vol_info:
-    region: "{{ aws_region }}"
-    filters:
-      volume_id: "{{ new_volume.volume_id }}"
-    access_key: "{{ assumed_role.sts_creds.access_key }}"
-    secret_key: "{{ assumed_role.sts_creds.secret_key }}"
-    session_token: "{{ assumed_role.sts_creds.session_token }}"
-  register: new_volume_status
-  until: new_volume_status.volumes[0].status == "available"
-  retries: 10
-  delay: 5
-  delegate_to: localhost
-
-- name: Detach old root volume
-  amazon.aws.ec2_vol:
-    region: "{{ aws_region }}"
-    id: "{{ old_root_volume_id }}"
+    id: "{{ item.old_volume_id }}"
     instance: "{{ instance_id }}"
     state: absent
     access_key: "{{ assumed_role.sts_creds.access_key }}"
     secret_key: "{{ assumed_role.sts_creds.secret_key }}"
     session_token: "{{ assumed_role.sts_creds.session_token }}"
+  loop: "{{ block_device_new_volumes }}"
   delegate_to: localhost
 
-- name: Attach new volume
+# Attach New Volumes
+- name: Attach new volumes
   amazon.aws.ec2_vol:
     region: "{{ aws_region }}"
     instance: "{{ instance_id }}"
-    id: "{{ new_volume.volume_id }}"
-    device_name: "{{ device_name }}"
+    id: "{{ item.new_volume_id }}"
+    device_name: "{{ item.device_name }}"
     access_key: "{{ assumed_role.sts_creds.access_key }}"
     secret_key: "{{ assumed_role.sts_creds.secret_key }}"
     session_token: "{{ assumed_role.sts_creds.session_token }}"
+  loop: "{{ block_device_new_volumes }}"
   delegate_to: localhost
 
+# Start the EC2 Instance
 - name: Start the instance
   amazon.aws.ec2_instance:
     region: "{{ aws_region }}"
@@ -169,4 +191,4 @@
 
 - name: Print recovery status
   ansible.builtin.debug:
-    msg: "Instance {{ instance_id }} is running with restored volume {{ new_volume.volume_id }} (from snapshot {{ snapshot_id }})"
+    msg: "Instance {{ instance_id }} is running with restored volumes from snapshots."
