Updated documentation for all roles

--- a/group_vars/all/all.yml
+++ b/group_vars/all/all.yml
@@ -9,15 +9,14 @@ system_services_list:
   - corosync
 satellite_deployment_organization: 'RedHat'
 satellite_deployment_admin_username: 'admin'
-satellite_deployment_admin_password: redhat123
-satellite_lifecycle: [NonProd, PreProd, Prod]
+satellite_deployment_admin_password: password
+satellite_lifecycle: [Build, NonProd, PreProd, Prod]
 satellite_content_view: test
 satellite_deployment_server: "https://rhsatellite.example.org"
 satellite_kat_cert: "katello-ca-consumer-latest.noarch.rpm"
-#satellite_base_url: "rhsatpool1.prod.cba"
 sat_activation_key: "ak-rhel8-nonprod"
 yum_repo_dir: "/etc/yum.repos.d"
-satellite_content_view_version_cleanup_keep: 0
+satellite_content_view_version_cleanup_keep: 2
 errata_filter_name: "filter-security-bugfix"
 errata_end_date: "2025-02-05"
 
@@ -43,8 +42,8 @@ cluster_backup_dir: '/tmp'
 instance_id: "i-06f2ae9866ae9448b"  # Replace with your instance ID
 
 # Variables for AWS Roles
-aws_role: AcoeCICDRole
-aws_account_no: 273354650151
+aws_role: 
+aws_account_no: 
 
 # Variables for the Tags
 tag_value: "Summary To Add to the Tag's value Something"
