--- a/cluster_node_start/tasks/main.yml
+++ b/cluster_node_start/tasks/main.yml
@@ -1,31 +1,96 @@
 ---
-- name: Gather facts (including hostname)
-  ansible.builtin.setup:
+- name: Start Cluster Services
+  block:
+    - name: Gather facts (including hostname)
+      ansible.builtin.setup:
+    
+    - name: Run pcs cluster start
+      ansible.builtin.command: "pcs cluster start"
+      register: cluster_start_result
+    
+    - name: Fail if pcs cluster start command failed
+      ansible.builtin.fail:
+        msg: "Failed to start the cluster. Error: {{ cluster_start_result.stderr }}"
+      when: cluster_start_result.rc != 0
 
-- name: Run pcs cluster start
-  ansible.builtin.command: "pcs cluster start"
-  register: cluster_start_result
-  ignore_errors: true
+    - name: Wait for cluster services to start
+      ansible.builtin.service_facts:
+      register: service_facts_result
+      retries: 5
+      delay: 10
+      until: >-
+        system_services_list |
+        map('regex_replace', '$', '.service') |
+        select('in', service_facts_result.ansible_facts.services.keys()) |
+        map('extract', service_facts_result.ansible_facts.services) |
+        map(attribute='state') |
+        select('eq', 'running') |
+        list | length == system_services_list | length
+ 
 
-- name: Fail if pcs cluster start command failed
-  ansible.builtin.fail:
-    msg: "Failed to start the cluster. Error: {{ cluster_start_result.stderr }}"
-  when: cluster_start_result.rc != 0
+    - name: Verify if all cluster services are started
+      ansible.builtin.assert:
+        that: >-
+          system_services_list |
+          map('regex_replace', '$', '.service') |
+          select('in', service_facts_result.ansible_facts.services.keys()) |
+          map('extract', service_facts_result.ansible_facts.services) |
+          map(attribute='state') |
+          select('eq', 'running') |
+          list | length == system_services_list | length
+        fail_msg: "Some cluster services are not running"
+        success_msg: "All cluster services are running."
 
-- name: Pause for a while
-  ansible.builtin.pause:
-    seconds: 10
+  rescue:
+    - name: Handle errors in the block
+      ansible.builtin.fail:
+        msg: >
+          An error occurred while starting the cluster.
+          Details: {{ ansible_failed_result.msg }}
+          Task: {{ ansible_failed_result.task }}
 
-- name: Verify if Cluster Services are Started
-  ansible.builtin.service_facts:
+    - name: Attempt to restart the cluster
+      ansible.builtin.command: "pcs cluster stop"
+      register: cluster_stop_result
 
-- name: Check each service status
-  ansible.builtin.assert:
-    that:
-      - ansible_facts.services[item + '.service'].state == 'running'
-    fail_msg: "{{ item }} service is not running!"
-    success_msg: "{{ item }} service is running."
-  loop: "{{ system_services_list }}"
-  loop_control:
-    label: "{{ item }}"
+    - name: Fail if pcs cluster stop command failed
+      ansible.builtin.fail:
+        msg: "Failed to stop the cluster. Error: {{ cluster_stop_result.stderr }}"
+      when: cluster_stop_result.rc != 0
+
+    - name: Wait for cluster services to stop
+      ansible.builtin.service_facts:
+      register: service_facts_result
+      retries: 5
+      delay: 10
+      until: >-
+        system_services_list |
+        map('regex_replace', '$', '.service') |
+        select('in', service_facts_result.ansible_facts.services.keys()) |
+        map('extract', service_facts_result.ansible_facts.services) |
+        map(attribute='state') |
+        select('eq', 'stopped') |
+        list | length == system_services_list | length
+ 
+
+    - name: Verify if all cluster services are stopped
+      ansible.builtin.assert:
+        that: >-
+          system_services_list |
+          map('regex_replace', '$', '.service') |
+          select('in', service_facts_result.ansible_facts.services.keys()) |
+          map('extract', service_facts_result.ansible_facts.services) |
+          map(attribute='state') |
+          select('eq', 'stopped') |
+          list | length == system_services_list | length
+        fail_msg: "Some cluster services are still running"
+        success_msg: "All cluster services are stopped."
+
+
+  always:
+    - name: Log execution status
+      ansible.builtin.debug:
+        msg: >
+          Block execution completed with status: {{ 'Success' if ansible_failed_result is not defined else 'Failure' }}.
+          Details: {{ ansible_failed_result.msg | default('No errors') }}
 
