--- a/cluster_node_start/tasks/main.yml
+++ b/cluster_node_start/tasks/main.yml
@@ -49,42 +49,42 @@
           Details: {{ ansible_failed_result.msg }}
           Task: {{ ansible_failed_result.task }}
 
-    - name: Attempt to restart the cluster
-      ansible.builtin.command: "pcs cluster stop"
-      register: cluster_stop_result
+    # - name: Attempt to restart the cluster
+    #   ansible.builtin.command: "pcs cluster stop"
+    #   register: cluster_stop_result
 
-    - name: Fail if pcs cluster stop command failed
-      ansible.builtin.fail:
-        msg: "Failed to stop the cluster. Error: {{ cluster_stop_result.stderr }}"
-      when: cluster_stop_result.rc != 0
+    # - name: Fail if pcs cluster stop command failed
+    #   ansible.builtin.fail:
+    #     msg: "Failed to stop the cluster. Error: {{ cluster_stop_result.stderr }}"
+    #   when: cluster_stop_result.rc != 0
 
-    - name: Wait for cluster services to stop
-      ansible.builtin.service_facts:
-      register: service_facts_result
-      retries: 5
-      delay: 10
-      until: >-
-        system_services_list |
-        map('regex_replace', '$', '.service') |
-        select('in', service_facts_result.ansible_facts.services.keys()) |
-        map('extract', service_facts_result.ansible_facts.services) |
-        map(attribute='state') |
-        select('eq', 'stopped') |
-        list | length == system_services_list | length
+    # - name: Wait for cluster services to stop
+    #   ansible.builtin.service_facts:
+    #   register: service_facts_result
+    #   retries: 5
+    #   delay: 10
+    #   until: >-
+    #     system_services_list |
+    #     map('regex_replace', '$', '.service') |
+    #     select('in', service_facts_result.ansible_facts.services.keys()) |
+    #     map('extract', service_facts_result.ansible_facts.services) |
+    #     map(attribute='state') |
+    #     select('eq', 'stopped') |
+    #     list | length == system_services_list | length
  
 
-    - name: Verify if all cluster services are stopped
-      ansible.builtin.assert:
-        that: >-
-          system_services_list |
-          map('regex_replace', '$', '.service') |
-          select('in', service_facts_result.ansible_facts.services.keys()) |
-          map('extract', service_facts_result.ansible_facts.services) |
-          map(attribute='state') |
-          select('eq', 'stopped') |
-          list | length == system_services_list | length
-        fail_msg: "Some cluster services are still running"
-        success_msg: "All cluster services are stopped."
+    # - name: Verify if all cluster services are stopped
+    #   ansible.builtin.assert:
+    #     that: >-
+    #       system_services_list |
+    #       map('regex_replace', '$', '.service') |
+    #       select('in', service_facts_result.ansible_facts.services.keys()) |
+    #       map('extract', service_facts_result.ansible_facts.services) |
+    #       map(attribute='state') |
+    #       select('eq', 'stopped') |
+    #       list | length == system_services_list | length
+    #     fail_msg: "Some cluster services are still running"
+    #     success_msg: "All cluster services are stopped."
 
 
   always:
